<resources>
    <string name="app_name">ResepNusantara</string>
    <string name="name">Nama</string>
    <string name="name_value">Taufik Anwar</string>
    <string name="email">Email</string>
    <string name="email_value">anwrtaufik@gmail.com</string>
    <string name="hello">Hello,</string>
    <string name="nick_name">Taufik</string>
    <string name="greetings">Good Morning</string>
    <string name="food">Food</string>
    <string name="drink">Drink</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="dummy_desc">ini adalah deskripsi</string>
    <string name="ingredients">Ingredients</string>
    <string name="dummy_ingredients">ini adalah ingredients</string>
    <string name="steps">Steps</string>
    <string name="dummy_steps">ini adalah steps</string>
    <string name="share">Share</string>
    <string name="bomboo">Bomboo</string>
    <string-array name="data_food_title">
        <item>Rendang</item>
        <item>Nasi Goreng</item>
        <item>Nasi Uduk</item>
        <item>Soto</item>
        <item>Sate</item>
        <item>Gado-Gado</item>
        <item>Gudeg</item>
        <item>Mie Rebus</item>
        <item>Sop Buntut</item>
        <item>Tempe Mendoan</item>
    </string-array>
    <string-array name="data_food_description">
        <item>Kebanyakan dari kita kalau ke restoran Padang pasti langsung pesan rendang. Tak salah memang karena ini merupakan masakan nusantara yang melegenda. Bahkan makanan ini berada di posisi pertama dalam jajaran 50 makanan dunia terenak versi CNN, lho.</item>
        <item>Saat ada sisa nasi, tak jarang kita membuatnya sebagai menu nasi goreng untuk sarapan. Bukan hanya sisa nasi saja, nasi yang baru matang juga enak untuk dimasak sebagai nasi goreng. Masakan ini masuk juga dalam daftar makanan terenak di dunia. Kamu bisa lihat resep berikut untuk membuat nasi goreng yang enak.</item>
        <item>Nasi uduk dibuat dengan cara mengolah beras putih, namun diaron dan dikukus memakai santan. Dibumbui sehingga rasa nasinya begitu khas dan nikmat. Disajkan dengan aneka ikan, masakan ini sering dijual di pinggir jalan sebagai menu sarapan.</item>
        <item>Varian soto di Indonesia sangatlah banyak. Masakan berkuah kuning ini di tiap daerah memiliki ciri khasnya sendiri. Cita rasa soto begitu khas dan banyak disukai wisatawan dari berbagai negara. Kamu bisa membuat soto ayam lezat dengan resep persembahan kami.</item>
        <item>Sate jadi makanan favorit banyak orang nih. Bukan hanya menu favorit di Indonesia, namun sate juga menjadi menu sejumlah restoran internasional. Yuk segera buat menu mudah ini. Untuk sate ayam bumbu kecap bisa intip resep berikut ini.</item>
        <item>Gado-gado rupanya begitu populer di luar negeri. Di Italia misalnya, lantaran makanan ini pernah diikutsertakan dalam kompetisi dan jadi juara pertama, maka makanan ini pun langsung banyak diminati. Yuk, segera buat dengan resep persembahan kami!</item>
        <item>Khas dari Jogja dan berhasil go international, itulah Gudeg. Makanan ini bahkan diminati untuk diimpor dalam bentuk kalengan. Bahkan di Clayton Road Australia, menu ini terdapat pada salah satu restoran di sana lho. Kalau mau bikin gudeg, kamu bisa lihat resep dari kami, selain itu jika ingin melihat tutorial dan resep alternatifnya.</item>
        <item>Kala hujan turun, enaknya memang makan yang hangat. Tak ada yang bisa menolah lezatnya mi rebus khas Indonesia nih. Kamu pastinya juga suka banget kan makan mi rebus kala hujan turun. Segera buat yuk, mi rebus yang lezat dengan resep di bawah ini.</item>
        <item>Sop buntut selain populer di Indonesia juga populer di Spanyol. Makanan ini kaya akan rempah sehingga rasanya begitu nikmat. Aromanya wangi dan cocok dimakan bersama nasi hangat, pastinya tak tertahankan lezatnya. Segera buat dengan resep kami berikut ini!</item>
        <item>Simple namun enak disajikan bersama apa saja. Aneka olahan tempe jangan sampai kamu lewatkan untuk dicoba. Salah satunya adalah tempe yang dibuat mendoan. Kamu bisa intip olahan tempe mendoan dengan resep di bawah ini.</item>
    </string-array>
    <string-array name="data_food_ingredients">
        <item>- 500 gram daging sapi\n- 500 ml santan dari 1 butir kelapa\n- 2000 ml santan dari 1 butir kelapa\n- 3 cm lengkuas dimemarkan\n- 2 batang serai diambil bagian putih dan memarkan\n- 2 lembar daun kunyit dibuat simpul\n- 2 buah cabai merah keriting\n- 5 buah cabai merah besar dibuang bijinya\n- 12 butir bawang merah\n- 4 Siung bawang putih\n- 4 butir kemiri disangrai\n- ½ sdt merica butiran\n- 1 sdm ketumbar butiran\n- 3 sdt garam\n- ½ sdt gula pasir\n- 3 cm jahe</item>
        <item>- 1 piring nasi putih\n- 2 siung bawang putih\n- 2 buah bawang merah\n- 3 buah cabai rawit\n- 1 buah cabai merah\n- 2 sdm kecap manis\n- 1 sdm saus tomat\n- 1 sdm saus sambal\n- 1 sdm saus tiram\n- 1 sdt garam\n- 1/2 sdt merica bubuk\n- 1/2 sdt kaldu bubuk rasa ayam\n- 1 batang daun bawang dicincang halus\n- 1 butir telur ayam\n- 2 sdm ayam suwir\n- 1 buah sosis ayam diiris tipis\n- 3 sdm margarin untuk menumis</item>
        <item>- 300 g beras\n- 450 ml santan kelapa kental\n- 2 lembar daun salam muda\n- 2 butir cengkeh\n- 2 batang serai dimemarkan\n- 2 cm kayu manis\n- 1sdt merica\n- 1 sdt garam</item>
        <item>- 1 ekor ayam\n- 200 g kol diiris tipis\n- 200 g tauge dibersihkan dan kukus hingga matang\n- 4 buah kentang dibersihkan diiris tipis\n- 2 buah tomat dibagi menjadi 6 bagian\n- 50 g, soun rendam dengan air panas\n- 3 butir telur ayam direbus hingga matang kemudian iris menjadi 4 bagian\n- 2 L air\n- 50 g bawang goreng\n- 3 lembar daun jeruk\n- 2 batang serai\n- 2 lembar daun salam\n- 1 batang daun bawang diiris halus\n- 2 sdm lengkuas\n- 25 g minyak goreng\n- 2 cm kunyit\n- 4 buah kemiri\n- 15 g jahe\n- 3 buah bawang merah\n- 2 siung bawang putih\n- 1 sdt Merica\n- 2 sdm garam\n- 1 buah jeruk nipis, bagi menjadi 8 bagian</item>
        <item>- 100 gram daging ayam tanpa tulang\n- 2 sdm margarin dicampur sisa bumbu marinasi untuk olesan\n- Tusuk sate secukupnya\n- 1 sdm gula merah Jawa sisir halus\n- 0,5 sdt ketumbar\n- 1 siung bawang putih\n- 3 siung bawang merah\n- 10ml kecap manis kental</item>
        <item>- 150 gram kubis diiris-iris kecil\n- 175 gram bayam\n- 200 gram mentimun diiris-iris kecil\n- 175 gram tauge\n- 300 gram kentang rebus diiris dadu\n- 200 gram kacang panjang\n- 300 gram tahu kuning digoreng dan diiris dadu</item>
        <item>- 2 sdm garam\n- 10 butir kemiri disangrai\n- 1sdt ketumbar sangrai\n- 15 siung bawang merah\n- 10 siung bawang putih\n- ½ sdt merica bubuk\n- 1 kg nangka muda</item>
        <item>- 500 gr mi telur, rebus terlebih dahulu\n- 2 butir telur ayam\n- 1 ikat daun caisim\n- 30 gr kol, cincang kasar\n- 50 gr ayam suwir\n- Kecap manis secukupnya\n- Garam secukupnya\n- Merica secukupnya</item>
        <item>- 1 kg buntut sapi dipotongi\n- 3 buah wortel dipotongi\n- 2 buah kentang dipotongi\n- 2 batang daun bawang dipotongi\n- 1 ikat kecil seledri disimpulkan1 buah tomat dipotongi\n- 1 buah pala dipecahkan dan haluskan</item>
        <item>- 1 papan tempe, iris tipis\n- 2 sdm tepung terigu\n- 2 sdm tepung beras\n- 1 sdm tepung tapioka\n- 2 batang daun bawang, iris tipis\n- 2 lembar daun jeruk, buang punggung daunnya, iris tipis</item>
    </string-array>
    <string-array name="data_food_steps">
        <item>- Pertama, ambil dagingnya lalu silahkan dipotong-potong 2 cm melawan serat supaya empuk lalu sisihkan dulu.\n- Masaklah santan encer lalu masukkan lengkuas dan serai. Jangan lupa tambahkan juga daun kunyit dan bumbu halusnya.\n- Aduk sampai merata lalu masukkan daging dan masak sampai dagingnya empuk.\n- Jika kuah sudah mengental, kamu bisa mulai menuangi santan kentalnya lalu masak pada atas api kecil.</item>
        <item>- Pertama yang bisa kamu lakukan adalah menghaluskan bawang putih dan juga bawang merah. Haluskan juga cabai rawit serta cabai merah.\n- Siapkan wajan lalu panaskan margarin dan tumis bumbu halusnya sampai harum.\n- Masukkan ayam suwir dan juga sosis lalu tumis sebentar.\n- Tambahkan telur dan tumis bersama dengan bumbu.\n- Masukkan nasi lalu aduk sampai tercampur rata.\n- Tuangi kecap manis, saus tomat dan saus sambal.\n- Kamu juga perlu menuangi saus tiram lalu menaburkan garam, merica dan kaldu bubuk.\n- Aduk sampai nasi berubah dan merata lalu siap disajikan.</item>
        <item>- Cuci beras sampai bersih lalu sisihkan dulu.\n- Rebuslah santan lalu masukkan daun salam dan serai\n- Jangan lupa juga untuk memasukkan cengkeh, kayu manis serta merica dan garam.\n- Aduk sampai mendidih lalu masukkan santan dan beras.\n- Kukuslah sampai beras matang hingga menjadi nasi dan siap disajikan.</item>
        <item>- Sebagai awalan kamu bisa menghaluskan kunyit, kemiri, jahe beserta bawang merah dan putih.\n- Masukkan juga merica dan garam lalu aduk merata.\n- Panaskan wajan dengan api sedang lalu tumis bumbu hingga harum.\n- Jangan lupa untuk menambahkan daun jeruk dan daun salam.\n- Tambahkan juga serai dan lengkuas lalu aduk hingga harum.\n- Ambil panci lalu isi air dan didihkan lalu masukkan bumbu yang telah ditumis ke dalam air rebusan.\n- Jika sudah mendidih, masukkan ayam dan biarkan matang.\n- Keluarkan ayam dari kuah lalu pisahkan daging dengan tulangnya.\n- Masukkan lagi tulang ayam pada kuah sementara daging ayam bisa digoreng hingga kecoklatan lalu disuwir kecil.\n- Masukkan daun bawang pada kuah soto.</item>
        <item>- Potongi kotak-kotak untuk daging ayamnya\n- Haluskan bumbu marinasi lalu campur dengan daging ayam yang sudah dipotong lalu aduk merata dan diamkan meresap 30 menit.\n- Tusuki daging ayam hingga habis namun sisa bumbu jangan dibuang.\n- Masukkan margarin pada sisa bumbu dan aduk rata.\n- Siapkan bakaran lalu olesi sate dengan bumbu olesan hingga merata.\n- Bakar satenya sesekali dibolak balik dan diolesi bumbu hingga matang.</item>
        <item>- Rebus semua sayuran sampai lunak lalu tiriskan.\n- Haluskan cabe merah, garam, cabe rawit dan juga terasi hingga halus.\n- Masukkan kacang tanah dan kacang kenari.\n- Tambahkan air asam, kecap, air dan gula merah.\n- Aduk rata lalu masak di atas wajan hingga mendidih.\n- Biarkan dingin lalu siap disajikan dengan lainnya.\n- Ambil piring lalu tambahkan sayuran dan kentang.</item>
        <item>- Cuci nangka lalu potong dadu dan rebus beberapa menit lalu tiriskan dan sisihkan.\n- Ambil panci, alasi dasarnya dengan daun salam dan irisan lengkuas.\n- Masukkan telur rebus, gula aren dan nangka pada panci.\n- Haluskan bumbu lalu campur dengan setengah air kelapa dan aduk rata baru tuang pada panci.\n- Tuang air kelapa yang tak dicampur hingga telur dan nangka terendam lalu tutup pancinya.\n- Masak 2 jam dengan api sedang, lalu jika sudah menyusut airnya, sisihkan dan angkat telurnya.</item>
        <item>- Tumis bumbu halus sampai harum.\n- Orak arik telusnya lalu masukkan daun caisim dan kol dan tunggu sampai layu.\n- Masukkan mi dan aduk rata, lalu masukkan air secukupnya.\n- Tambahkan kecap, merica, garam dan ayam suwir.\n- Aduk rata dan biarkan kuah mendidih baru sajikan.</item>
        <item>- Panaskan air lalu masak hingga mendidih.\n- Masukkan buntut sapi lalu rebus sampai berbusa dan buang airnya.\n- Didihkan air baru lalu masukkan buntut dan rebus sampai lunak\n- Panaskan minyak dan tumis bunbu halus hingga wangi dan matang.\n- Masukkan tumisan dalam panci rebusan buntut.\n- Tambahkan wortel dan kentang lalu masak pakai api kecil sampai mendidih.\n- Bubuhi garam dan cengkeh lalu masukkan bunga lawang, gula dan kayu manis.\n- Tambahkan juga kapulaga dan pala lalu tes rasanya.</item>
        <item>- Haluskan bumbu yang terdiri dari bawang putih, bawang merah, kunyit, dan ketumbar lalu campur bumbu halus dengan terigu dan tepung beras.\n- Masukkan juga tapioka, irisan daun bawang dan daun jeruk.\n- Gulingkan tempe pada adonan lalu goreng sampai matang.</item>
    </string-array>
</resources>