<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="20dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_hello"
        style="@style/TextView.Greeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/tv_name"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_name"
        style="@style/TextView.Greeting.Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nick_name"
        app:layout_constraintLeft_toRightOf="@+id/tv_hello"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_greeting"
        style="@style/TextView.Greeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/greetings"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_hello" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_about_page"
        style="@style/Widget.MaterialComponents.ShapeableImageView.Profile"
        android:src="@drawable/profile_400"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_type"
        style="@style/TextAppearance.MaterialComponents.Subtitle2.Base"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:text="Recipe Type"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_greeting" />

    <RadioGroup
        android:id="@+id/rg_recipe_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_type"
        android:orientation="horizontal">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rb_food"
            style="@style/Widget.MaterialComponents.CompoundButton.RadioButton.MenuType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/food"/>

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rb_drink"
            style="@style/Widget.MaterialComponents.CompoundButton.RadioButton.MenuType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/drink"/>
    </RadioGroup>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_recipes"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rg_recipe_type"
        tools:layout_editor_absoluteX="32dp"
        tools:layout_editor_absoluteY="32dp" />

</androidx.constraintlayout.widget.ConstraintLayout>