<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity"
    android:padding="42dp">

    <com.google.android.material.imageview.ShapeableImageView
        style="@style/Widget.MaterialComponents.ShapeableImageView.Profile"
        android:id="@+id/iv_profile"
        android:layout_width="120dp"
        android:layout_height="120dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/profile_400"/>

    <TextView
        android:id="@+id/tv_name"
        style="@style/TextAppearance.MaterialComponents.Subtitle1.DetailRecipe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_profile" />

    <TextView
        android:layout_marginTop="8dp"
        android:id="@+id/tv_name_value"
        style="@style/TextAppearance.MaterialComponents.Body2.DetailRecipe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name_value"
        app:layout_constraintBottom_toTopOf="@+id/tv_email"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_name" />

    <TextView
        android:id="@+id/tv_email"
        style="@style/TextAppearance.MaterialComponents.Subtitle1.DetailRecipe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/email"
        app:layout_constraintBottom_toTopOf="@+id/tv_email_value"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_name_value" />

    <TextView
        android:layout_marginTop="8dp"
        android:id="@+id/tv_email_value"
        style="@style/TextAppearance.MaterialComponents.Body2.DetailRecipe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email_value"
        app:layout_constraintTop_toBottomOf="@+id/tv_email"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>